--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,22 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong><%= t 'activerecord.attributes.book.title' %>:</strong>
+  <strong><%= t('activerecord.attributes.book.title') %>:</strong>
   <%= @book.title %>
 </p>
 
 <p>
-  <strong><%= t 'activerecord.attributes.book.memo' %>:</strong>
+  <strong><%= t('activerecord.attributes.book.memo') %>:</strong>
   <%= @book.memo %>
 </p>
 
 <p>
-  <strong><%= t 'activerecord.attributes.book.author' %>:</strong>
+  <strong><%= t('activerecord.attributes.book.author') %>:</strong>
   <%= @book.author %>
 </p>
 
 <p>
-  <strong><%= t 'activerecord.attributes.book.picture' %>:</strong>
+  <strong><%= t('activerecord.attributes.book.picture') %>:</strong>
   <%= image_tag(@book.picture_url) if @book.picture.present? %>
 </p>
 
