取得先を変更

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to t('helpers.submit.create'), new_book_path %>
+<%= link_to t('activerecord.attributes.book.new_book'), new_book_path %>
