未翻訳部分、不適切な翻訳を修正

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t('activerecord.attributes.book.editing_book') %></h1>
+<h1><%= t('views.edit') %></h1>
 
 <%= render 'form', book: @book %>
 
