--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= t('activerecord.attributes.books') %></h1>
+<h1><%= t('views.title') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th><%= t('activerecord.attributes.book.title') %></th>
-      <th><%= t('activerecord.attributes.book.memo') %></th>
-      <th><%= t('activerecord.attributes.book.author') %></th>
-      <th><%= t('activerecord.attributes.book.picture') %></th>
+      <th><%= Book.human_attribute_name(:title) %></th>
+      <th><%= Book.human_attribute_name(:memo) %></th>
+      <th><%= Book.human_attribute_name(:author) %></th>
+      <th><%= Book.human_attribute_name(:picture) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,7 +22,7 @@
         <td><%= book.picture %></td>
         <td><%= link_to t('button.show'), book %></td>
         <td><%= link_to t('button.edit'), edit_book_path(book) %></td>
-        <td><%= link_to t('button.destroy'), book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('button.destroy'), book, method: :delete, data: { confirm: t('message.delete_confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to t('activerecord.attributes.book.new_book'), new_book_path %>
+<%= link_to t('views.new'), new_book_path %>
