ユーザ一覧へ戻るリンクを追加

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -17,3 +17,4 @@
 </p>
 
 <%= link_to_if(@user.email == current_user.email, 'edit', edit_user_registration_path){} %>
+<%= link_to 'back',users_url%>
