--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -34,5 +34,5 @@
 
 <%= link_to t('views.common.new'), new_book_path %>
 <br>
-<%= link_to 'users',users_url%>
+<%= link_to User.model_name.human,users_url %>
 <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
