--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -16,11 +16,11 @@
         <td><%= user.email %></td>
         <td><%= user.postalcode %></td>
         <td><%= user.address %></td>
-        <td><%= link_to "show", user_path(user) %></td>
+        <td><%= link_to t('views.common.show'), user_path(user) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 <%= paginate @users %>
 <br>
-<%= link_to "back", books_url %>
+<%= link_to t('views.common.back'), books_url %>
