--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t('views.edit') %></h1>
+<h1><%= t('views.edit', item: Book.model_name.human) %></h1>
 
 <%= render 'form', book: @book %>
 
