不要な{}を削除

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,5 +16,5 @@
   <%= @user.self_introduction %>
 </p>
 
-<%= link_to_if(@user.email == current_user.email, t('views.common.edit'), edit_user_registration_path){} %>
+<%= link_to_if(@user.email == current_user.email, t('views.common.edit'), edit_user_registration_path) %>
 <%= link_to t('views.common.back'),users_url %>
