--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,8 +9,8 @@
   </div>
 
  <div class="field">
-    <%= f.label :postalcode %>
-    <%= f.text_field :postalcode %>
+    <%= f.label :postal_code %>
+    <%= f.text_field :postal_code %>
   </div>
 
   <div class="field">
