--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,8 @@
   <%= @user.email %>
 </p>
 <p>
-  <strong><%= User.human_attribute_name(:postalcode) %>:</strong>
-  <%= @user.postalcode %>
+  <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
+  <%= @user.postal_code %>
 </p>
 <p>
   <strong><%= User.human_attribute_name(:address) %>:</strong>
