--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,10 @@
   <% end %>
 </p>
 
+<p>
+  <%= link_to(@user.followings.count, followings_user_path(@user)) %> フォロー中
+  <%= link_to(@user.followers.count, followers_user_path(@user)) %> フォロワー
+</p>
 
 <% if current_user.following?(@user) %>
   <%= form_with(url: user_follow_relation_path(@user), method: :delete, local: true) do |form| %>
