--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,4 +1,4 @@
-<h1>フォロー中</h1>
+<h1><%= t('views.users.followings') %></h1>
 <% @followings.each do |user| %>
   <%= link_to(user.name, user) %>
   <br>
