--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,6 +1,5 @@
 <h1><%= t('views.users.followers') %></h1>
 <% @followers.each do |user| %>
-  <%= link_to(user.name, user) %>
-  <br>
-<% end%>
+  <p><%= link_to(user.name, user) %></p>
+<% end %>
 <%= paginate @followers %>
