--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,6 +1,5 @@
 <h1><%= t('views.users.followings') %></h1>
 <% @followings.each do |user| %>
-  <%= link_to(user.name, user) %>
-  <br>
-<% end%>
+  <p><%= link_to(user.name, user) %></p>
+<% end %>
 <%= paginate @followings %>
