--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,6 +1,8 @@
 <h1><%= t('views.users.followings') %></h1>
-<% @followings.each do |user| %>
-  <p><%= link_to(user.name, user) %></p>
-<% end %>
+<ul>
+  <% @followings.each do |user| %>
+    <li><%= link_to(user.name, user) %></li>
+  <% end %>
+</ul>
 <%= paginate @followings %>
 <%= link_to t('views.common.back'), @user %>
