--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,6 +5,8 @@
     <tr>
       <th>Title</th>
       <th>Content</th>
+      <th>User</th>
+      <th>Posting Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +16,8 @@
       <tr>
         <td><%= report.title %></td>
         <td><%= report.content %></td>
+        <td><%= report.user.name %></td>
+        <td><%= l report.created_at, format: :short %></td>
         <td><%= link_to 'Show', report %></td>
         <% if report.user == current_user %>
           <td><%= link_to 'Edit', edit_report_path(report) %></td>
