--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -9,6 +9,16 @@
 </p>
 
 <p>
+  <small>User:</small>
+  <%= @report.user.name %>
+</p>
+
+<p>
+  <small>Posting Date:</small>
+  <%= l @report.created_at, format: :short %>
+</p>
+
+<p>
   <% if @report.user == current_user %>
     <%= link_to 'Edit', edit_report_path(@report) %> |
     <%= link_to 'Destroy', @report, method: :delete, data: { confirm: 'Are you sure?' } %>
