--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,18 +1,21 @@
-<h2>Comments</h2>
+<h2><%= Comment.model_name.human %></h2>
 <table>
   <thead>
     <tr>
-      <th>comment</th>
-      <th>User</th>
-      <th>Posting Date</th>
-      <th></th>
+      <th><%= Comment.model_name.human %></th>
+      <th><%= Report.human_attribute_name(:user) %></th>
+      <th><%= Report.human_attribute_name(:created_time) %></th>
     </tr>
   </thead>
   <tbody>
     <% commentable.comments.order(:id).includes(:user).each do |comment| %>
       <tr>
       <td><%= comment.content %></td>
-      <td><%= comment.user.name%></td>
+      <% if comment.user.name.empty? %>
+        <td><%= comment.user.email %></td>
+      <% else %>
+        <td><%= comment.user.name %></td>
+      <% end %>
       <td><%= l comment.created_at, format: :short %></td>
       </tr>
     <% end %>
@@ -21,6 +24,6 @@
 
 <%= form_with model: [commentable, commentable.comments.new], local: true do |form| %>
     <%= form.text_field :content, required: true %>
-    <%= form.submit 'post' %>
+    <%= form.submit t('helpers.submit.create') %>
 <% end %>
 
