--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Reports</h1>
+<h1><%= Report.model_name.human %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>User</th>
-      <th>Posting Date</th>
+      <th><%= Report.human_attribute_name(:title) %></th>
+      <th><%= Report.human_attribute_name(:content) %></th>
+      <th><%= Report.human_attribute_name(:user) %></th>
+      <th><%= Report.human_attribute_name(:created_time) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,12 +16,16 @@
       <tr>
         <td><%= report.title %></td>
         <td><%= report.content %></td>
-        <td><%= report.user.name %></td>
+        <% if report.user.name.empty? %>
+          <td><%= report.user.email %></td>
+        <% else %>
+          <td><%= report.user.name %></td>
+        <% end %>
         <td><%= l report.created_at, format: :short %></td>
-        <td><%= link_to 'Show', report %></td>
+        <td><%= link_to t('views.common.show'), report %></td>
         <% if report.user == current_user %>
-          <td><%= link_to 'Edit', edit_report_path(report) %></td>
-          <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to t('views.common.edit'), edit_report_path(report) %></td>
+          <td><%= link_to t('views.common.destroy'), report, method: :delete, data: { confirm:  t('views.common.delete_confirm') } %></td>
         <% end %>
       </tr>
     <% end %>
@@ -30,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Report', new_report_path %>
+<%= link_to  t('views.common.title_new', name: Report.model_name.human), new_report_path %>
